syntax = "proto3";

option java_package = "smr.shop.libs.grpc.product";
option java_multiple_files = true;

import "Discount.proto";
import "object/ProductId.proto";

message ProductGrpcResponse {
  int64 id = 1;
  string slug = 2;
  int64 shopId = 3;
  double price = 4;
  double shippingPrice = 5;
  string name = 6;
  string thumbnail = 7;
  DiscountGrpcResponse discount = 8;
}



service ProductService {
  rpc getProductById(ProductGrpcId) returns (ProductGrpcResponse);
}